--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "21.0.3",
     "@angular/router": "21.0.3",
     "@jsverse/transloco": "^8.2.0",
+    "lucide-angular": "^0.562.0",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
