feat: ui skeleton and spinner

--- a/libs/ui/skeleton/project.json
+++ b/libs/ui/skeleton/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "skeletonẻ",
+  "name": "skeleton",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/ui/skeletonẻ/src",
+  "sourceRoot": "libs/ui/skeleton/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": [],
@@ -10,7 +10,7 @@
       "executor": "@nx/vitest:test",
       "outputs": ["{options.reportsDirectory}"],
       "options": {
-        "reportsDirectory": "../../../coverage/libs/ui/skeletonẻ"
+        "reportsDirectory": "../../../coverage/libs/ui/skeleton"
       }
     },
     "lint": {
